# Kallisto_Indexer

./: Cargo.toml
src/: genomes_and_contigs.rs  lib.rs  main.rs
test/: genomes.idx
