[package]
name = "kmer_indexer"
version = "0.1.0"
authors = ["Rhys Newell <r.newell@uq.edu.au>"]
license = "GPL-3.0"
description = "File parser to Kallisto or Bifrost"
readme = "README.md"

[dependencies]
bio = "0.20.*"
rust-htslib = {git = "https://github.com/rust-bio/rust-htslib"}
clap = "2.*"
log = "0.3.*"
env_logger = "0.4.*"
nix = "0.11.*"
tempfile = "3.0.4"
csv = "1"
serde = "1.0.79"

[dev-dependencies]
assert_cli = "0.6.*"
tempfile = "3.0.*"
